working on bugs

--- a/livestockapp/templates/animal_category/insert.html
+++ b/livestockapp/templates/animal_category/insert.html
@@ -9,7 +9,7 @@
     {% endif %}  
 <div class="container my-3">
   <h4 class="  text-center alert alert-info">Add Category</h4>
-  <form action="/" method="POST" >
+  <form action="/cat_insert" method="POST" >
     {% if error %}
     <div class="alert alert-danger" role="alert">
       Please Enter Your Name !!    
