--- a/livestockapp/templates/pregnancy_details/insert_pregnancy_detail.html
+++ b/livestockapp/templates/pregnancy_details/insert_pregnancy_detail.html
@@ -13,9 +13,9 @@
   
 {% comment %} <div class="container my-3"> 
   <div  style="margin-left:30%; margin-top:-42%; "><b></b></div> {% endcomment %}
-  <div style="">
+  <div >
   <form action='/insert_pregnancy_detail' method="POST" >
-    <div class="alert alert-dark" role="alert" style=""><b >Basic Info</b></div>
+    <div class="alert alert-dark" role="alert" ><b >Basic Info</b></div>
     {% if error2 %}
     <div class="alert alert-danger offset-2" role="alert">
       Please Enter Token No !!    
