--- a/livestockapp/templates/animal_profile/insert_animal_profile.html
+++ b/livestockapp/templates/animal_profile/insert_animal_profile.html
@@ -18,28 +18,28 @@
   <form action='/insert_animal_profile' method="POST" >
     <div class="alert alert-dark " role="alert" style="margin-top:2%;"><b >Basic Info</b></div>
     {% if error2 %}
-    <div class="alert alert-danger offset-2" role="alert">Please Enter Token No !! </div>
+    <div class="alert alert-danger" role="alert">Please Enter Token No !! </div>
     {% endif %}  
     {% if error3 %}
-    <div class="alert alert-danger offset-2" role="alert">Please Enter Name !! </div>
+    <div class="alert alert-danger" role="alert">Please Enter purchased_by !! </div>
     {% endif %} 
     {% if error4 %}
-    <div class="alert alert-danger offset-2" role="alert">Please Enter Color !! </div>
+    <div class="alert alert-danger" role="alert">Please Enter Color !! </div>
     {% endif %} 
     {% if error5 %}
-    <div class="alert alert-danger offset-2" role="alert"> Please Enter Category !! </div>
+    <div class="alert alert-danger" role="alert"> Please Enter Category !! </div>
     {% endif %} 
     {% if error6 %}
-    <div class="alert alert-danger offset-2" role="alert">Please Enter Gender!! </div>
+    <div class="alert alert-danger" role="alert">Please Enter Gender!! </div>
     {% endif %} 
     {% if error7 %}
-    <div class="alert alert-danger offset-2" role="alert"> Please Enter Person!! </div>
+    <div class="alert alert-danger" role="alert"> Please Enter Person!! </div>
     {% endif %} 
     {% if error8 %}
-    <div class="alert alert-danger offset-2" role="alert">Please Enter pragnancy_start_date !! </div>
+    <div class="alert alert-danger" role="alert">Please Enter pragnancy_start_date !! </div>
     {% endif %} 
     {% if error9 %}
-    <div class="alert alert-danger offset-2" role="alert">Please Enter is_Active Field !! </div>
+    <div class="alert alert-danger" role="alert">Please Enter is_Active Field !! </div>
     {% endif %} 
 
 
@@ -85,7 +85,7 @@
       </div>
     
       <div class="col-sm-3" >
-        <label for="purchased_by">Purchased By :</label>
+        <label for="purchased_by">Purchased By :<span style="color:red; font-weight:bold;">*</span></label>
         <select class="form-control" id="purchased_by" name="purchased_by">
           <option value="">Select Vendor</option>
           {% for party in all_parties %}
@@ -120,13 +120,16 @@
     <div class="row" style='margin-top:30px;'>
       <div class="col-sm-3"  >
         <label class="from-group" >Is Shared:<span style="color:red; font-weight:bold;">*</span></label>
+        <input type="hidden" id="is_shared_value" name="is_shared_value" value="{{ animal.is_shared }}">
+
         <select id="is_shared" name="is_shared"  class="form-control">
+          <option value="">Select Optiona</option>
           <option value="0">No</option>
           <option value="1">Yes</option>
         </select>
 
       </div>
-      <div class="col-sm-3" >
+      <div class="col-sm-3"  id="hiddenFields1">
         <label class="from-group" >Animal Partner:<span style="color:red; font-weight:bold;">*</span></label>
         <select id="person_id" name="person_id"  class="form-control">
           <option value="">Select Partner</option>
@@ -135,11 +138,11 @@
         {% endfor %}
         </select>    
       </div>
-      <div class="col-sm-3"  >
+      <div class="col-sm-3"  id="hiddenFields2" >
         <label class=" control-label" > Start Date :</label>
         <input type="date" class="form-control"  name="start_date"  >
       </div>
-      <div class="col-sm-3"  >
+      <div class="col-sm-3"  id="hiddenFields3" >
         <label for="end_date" class=" control-label" > End Date :</label>
         <input type="date" class="form-control"  name="end_date" value="" >
       </div>  
@@ -157,8 +160,11 @@
       </div>
       <div class="col-sm-3"  >
       </div>
-      <div class="col-sm-3"  >
+      <div class="col-sm-3"  id="hiddenFields4" >
+        <button type="button" class="btn btn-sm btn-primary" id="btn_save" style="margin-left: 28%;" data-toggle="modal" data-target="#add_account_model">View Voucher</button>
+{% comment %}
         <button  class="btn btn-sm btn-primary" id="btn_save" style="margin-left: 28%; " data-toggle="modal" data-target="#add_account_model">View Voucher</button>
+        {% endcomment %}
       </div>  
     </div>
       
@@ -200,6 +206,7 @@
                         <td><label style="margin-left: 370px;"><b>Vendor</b><span
                                     style="color:red; font-weight:bold">*</span></label></td>
                         <td>
+                          
                             <input type="hidden"  name="vendor_id" id="vendor_id" class="form-control">
                             <input type="text"  name="" id="vendor_name" class="form-control" readonly>
                         </td>
@@ -219,7 +226,7 @@
                     <thead>
                         <tr>
                             <th>Token Number<span style="color:red; font-weight:bold">*</span></th>
-                            <th>Description</th>
+                            <th>Name</th>
                             <th>Unit Price</th>
                         </tr>
                     </thead>
@@ -279,34 +286,40 @@
     })
 
     // 
-    $("#is_pregnant").on('click',function(){
-     
-      var is_pregnant = $("#is_pregnant").val();
-      if($('#is_pregnant').is(":checked")){
-        $("#pregnant_val").val(1);
-          $("#hiddenFields").show();
-        } else{
-        $("#pregnant_val").val(0);
-        $("#hiddenFields").hide();
-      }    
-    });
-
-    $("#gender").on('change',function(){
-      var gender = $("#gender").val();
+    $("#is_shared").on('change',function(){
+      var is_shared = $("#is_shared").val();
   
-      if(gender == "male"){
+      if(is_shared == "0"){
        
         $("#hiddenFields1").hide();
-        $("#hiddenFields").hide();
+        $("#hiddenFields2").hide();
+        $("#hiddenFields3").hide();
+        $("#hiddenFields4").hide();
         $("#pregnant_val").val(0);
       }
       else{
         $("#hiddenFields1").show();
+        $("#hiddenFields2").show();
+        $("#hiddenFields3").show();
+        $("#hiddenFields4").show();
        
       }
          
     });
+    $("#is_shared").on('change',function(){
+      var is_shared = $("#is_shared").val();
   
+      if(is_shared == "1"){
+       
+        $("#hiddenFields4").hide();
+        $("#pregnant_val").val(0);
+      }
+      else{
+        $("#hiddenFields4").show();
+       
+      }
+         
+    });
 // Voucer Code Start
 
 // writing Animal Name in Voucher
