--- a/livestockapp/templates/animal_profile/update_animal_profile.html
+++ b/livestockapp/templates/animal_profile/update_animal_profile.html
@@ -19,28 +19,28 @@
     <div class="alert alert-dark " role="alert" style="margin-top:5%;"><b >Basic Info</b></div>
     
     {% if error2 %}
-    <div class="alert alert-danger offset-2" role="alert">Please Enter Token No !! </div>
+    <div class="alert alert-danger" role="alert">Please Enter Token No !! </div>
     {% endif %}  
     {% if error3 %}
-    <div class="alert alert-danger offset-2" role="alert">Please Enter Name !! </div>
+    <div class="alert alert-danger" role="alert">Please Enter Purchase by !! </div>
     {% endif %} 
     {% if error4 %}
-    <div class="alert alert-danger offset-2" role="alert">Please Enter Color !! </div>
+    <div class="alert alert-danger" role="alert">Please Enter Color !! </div>
     {% endif %} 
     {% if error5 %}
-    <div class="alert alert-danger offset-2" role="alert"> Please Enter Category !! </div>
+    <div class="alert alert-danger" role="alert"> Please Enter Category !! </div>
     {% endif %} 
     {% if error6 %}
-    <div class="alert alert-danger offset-2" role="alert">Please Enter Gender!! </div>
+    <div class="alert alert-danger" role="alert">Please Enter Gender!! </div>
     {% endif %} 
     {% if error7 %}
-    <div class="alert alert-danger offset-2" role="alert"> Please Enter Person!! </div>
+    <div class="alert alert-danger" role="alert"> Please Enter Person!! </div>
     {% endif %} 
     {% if error8 %}
-    <div class="alert alert-danger offset-2" role="alert">Please Enter pragnancy_start_date !! </div>
+    <div class="alert alert-danger" role="alert">Please Enter pragnancy_start_date !! </div>
     {% endif %} 
     {% if error9 %}
-    <div class="alert alert-danger offset-2" role="alert">Please Enter is_Active Field !! </div>
+    <div class="alert alert-danger" role="alert">Please Enter is_Active Field !! </div>
     {% endif %} 
 
     {% csrf_token %}
@@ -50,8 +50,8 @@
         <label class=" control-label">Token No :<span style="color:red; font-weight:bold;">*</span></label>
 
         <input type="text" class="form-control" name="animal_id" required maxlength="50" value="{{animal.animal_id}}" readonly hidden/>
-        <input type="text" class="form-control" id="token_no" name="token_no" value= "Animal-{{animal.token_no}}" readonly >
-
+      <!--  <input type="text" class="form-control" id="token_no" name="token_no" value= "Animal-{{animal.token_no}}" readonly >
+      -->
       </div>
       <div class="col">
           <label class=" control-label">Name :<span style="color:red; font-weight:bold;">*</span></label>
@@ -90,11 +90,10 @@
       </div>
     
       <div class="col" >
-        <label for="purchased_by">Purchased By :</label>
+        <label for="purchased_by">Purchased By :<span style="color:red; font-weight:bold;">*</span></label>
         <select class="form-control" id="purchased_by" name="purchased_by">
-          <option value="">Select Vendor</option>
           {% for party in all_parties %}
-            {% if party.party_code == animal.ref_party_profile_id %}
+            {% if animal.ref_party_profile_id   == party.party_code %}
             <option value="{{party.party_code}}" selected>{{party.name}}</option>
             {% else %}
             <option value="{{party.party_code}}" >{{party.name}}</option>
@@ -105,11 +104,11 @@
       </div>
     </div>
     <div class="row">
-      <div class="col" >
+      <div class="col-sm-3" >
         <label class=" control-label">Date of Birth :</label>
         <input type="date" class="form-control" id="date_of_birth" name="date_of_birth" value="{{animal.date_of_birth|date:'Y-m-d'}}">
       </div>
-      <div class="col" >
+      <div class="col-sm-3" >
 		    <label class=" control-label">Gender : <span style="color:red; font-weight:bold;">*</span></label>
        <select  name="gender" class="form-control" required="required" id="gender" class="gender">
           {% if animal.gender == 'male' %}
@@ -122,9 +121,29 @@
           {% endif %}
           
         </select>
+      </div><div class="col-sm-3" >
+         
       </div>
-      <div class="col" >
-        <label class="from-group" >Person :<span style="color:red; font-weight:bold;">*</span></label>
+      <div  class="col-sm-3">
+        
+      </div>
+      <div class="col-sm-3" >
+        <label class="from-group" >Is Shared:<span style="color:red; font-weight:bold;">*</span></label>
+       
+        <select id="is_shared" name="is_shared"  class="form-control">
+          {% if animal.is_shared == '1' %}
+          <option value="1" selected >Yes</option>
+          <option value="0" >No</option>         
+        {% else  %}
+        <option value="1" selected>NO</option>
+        <option value="0" >Yes</option>
+        {% endif %}
+          </select>  
+      
+
+      </div>
+      <div class="col-sm-3"  id="hiddenFields1">
+        <label class="from-group" >Animal Partner:<span style="color:red; font-weight:bold;">*</span></label>
         <select name="person_id" id="person_id" class="form-control" >
           {% for y in per %}
             {% if animal.user_id == y.id %}
@@ -133,20 +152,22 @@
               <option  value="{{y.id}}">{{y.username}}</option> 
             {% endif %}
           {% endfor %}
-        </select>
+        </select>  
       </div>
-      <div  class="col">
+      <div class="col-sm-3"  id="hiddenFields2" >
         <label class=" control-label" > Start Date :</label>
         <input type="date" class="form-control"  name="start_date" value="{{animal.start_date|date:'Y-m-d'}}">
       </div>
-      <div class="col"  >
+      <div class="col-sm-3"  id="hiddenFields3" >
         <label for="end_date" class=" control-label" > End Date :</label>
         <input type="date" class="form-control"  name="end_date" value="{{animal.end_date|date:'Y-m-d'}}">
-      </div>
-      
+      </div> 
     </div>
 
-   
+
+
+
+
     <div class="row">
       <div class="col" >
         <label for="status" >is Active :<span style="color:red; font-weight:bold;">*</span></label>
@@ -161,7 +182,7 @@
       </div>
       <div class="col"  >
       </div>
-      <div class="col"  >
+      <div class="col" id="hiddenFields4" style="margin-top: 1%;">
         <button class="btn btn-sm btn-primary"  data-toggle="modal" data-target="#update_animal_pro" id="voucher_view">View Voucher</button>
       </div>    
     </div>
@@ -200,7 +221,9 @@
                         <td><input type="text" name="bill_id" id="bill_id" class="form-control" value="PV-{{purchase_detial.stock_purchase_main.bill_no}}" readonly></td>
                         <td><label style="margin-left: 370px;"><b>Vendor</b><span style="color:red; font-weight:bold">*</span></label></td>
                         <td>
-                            <input type="text"  name="" id="vendor_name" class="form-control" value="{{animal.ref_party_profile.name}}" readonly>
+                          
+                          <input type="text" name="" id="vendor_name" class="form-control" value="{{animal.ref_party_profile.name}}" readonly>
+                        
                         </td>
                     </tr>
                     <tr>
@@ -218,7 +241,7 @@
                     <thead>
                         <tr>
                             <th>Token Number<span style="color:red; font-weight:bold">*</span></th>
-                            <th>Description</th>
+                            <th>Name</th>
                             <th>Unit Price</th>
                         </tr>
                     </thead>
@@ -273,6 +296,40 @@
         $("#status_val").val(0);
       }
     })
+    $("#is_shared").on('change',function(){
+      var is_shared = $("#is_shared").val();
+  
+      if(is_shared == "0"){
+       
+        $("#hiddenFields1").hide();
+        $("#hiddenFields2").hide();
+        $("#hiddenFields3").hide();
+        $("#hiddenFields4").hide();
+        $("#pregnant_val").val(0);
+      }
+      else{
+        $("#hiddenFields1").show();
+        $("#hiddenFields2").show();
+        $("#hiddenFields3").show();
+        $("#hiddenFields4").show();
+       
+      }
+         
+    });
+    $("#is_shared").on('change',function(){
+      var is_shared = $("#is_shared").val();
+  
+      if(is_shared == "1"){
+       
+        $("#hiddenFields4").hide();
+        $("#pregnant_val").val(0);
+      }
+      else{
+        $("#hiddenFields4").show();
+       
+      }
+         
+    });
 
 
     // Voucer Code Start
