--- a/livestockapp/templates/animal_category/list.html
+++ b/livestockapp/templates/animal_category/list.html
@@ -17,8 +17,8 @@
         <th scope="col">Name</th>
         <th scope="col">Description</th>
         <th scope="col">Status</th>
-        <th scope="col">Created By</th>
-        <th scope="col">Updated By</th>
+        <th scope="col">Created by</th>
+        <th scope="col">Updated by</th>
         <th scope="col">Edit</th>
         <th scope="col">Delete</th>
 
@@ -38,8 +38,8 @@
        {% endif %}
        <td>{{cat.created_by}}</td>  
        <td>{{cat.updated_by}}</td> 
-       <td><a href="/edit/{{cat.category_id}}" class="btn btn-sm btn-warning"/>Edit</td>
-       <td><a href="/delete/{{cat.category_id}}" class="btn btn-sm btn-danger"/>Delete</td>
+       <td><a href="/edit/{{cat.category_id}}" class="btn btn-sm btn-warning">Edit</td>
+       <td><a href="/delete/{{cat.category_id}}" class="btn btn-sm btn-danger">Delete</td>
       </tr>
       {% endfor %}
     </tbody>
