--- a/livestockapp/templates/accounts/sale/invoice_details.html
+++ b/livestockapp/templates/accounts/sale/invoice_details.html
@@ -1,7 +1,7 @@
 <html>
 
 <body>
-    {% include 'header.html' %}
+    {% include 'navbar.html' %}
     <!-- ----------------------------------------------------------------------------------------------------------------- -->
     <table style="width:90%; margin-left: 3%; margin-right: 3%; margin-top: 5px;">
         <tr>
