--- a/livestockapp/templates/navbars/admin_navbar.html
+++ b/livestockapp/templates/navbars/admin_navbar.html
@@ -45,13 +45,13 @@
         </div>
       </li>
 
-      {% comment %} <li class="nav-item dropdown">
+      <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Sales</a>
         <div class="dropdown-menu">
           <a class="dropdown-item" href="{% url 'sale_invoice' %}">Sale Invoices</a>
           <a class="dropdown-item" href="{% url 'invoice_details' %}">Invoice Details</a>
         </div>
-      </li> {% endcomment %}
+      </li>
 
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Party</a>
