working on share_animal

--- a/livestockapp/templates/navbars/admin_navbar.html
+++ b/livestockapp/templates/navbars/admin_navbar.html
@@ -86,5 +86,12 @@
           <a class="dropdown-item" href="{% url 'all_journal_vouchers' %}">Voucher Details</a>
         </div>
       </li>
-      
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+         Shared Animal
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href='/shared_animal_person_list'>Shared Animal List</a>
+        </div>
+      </li>
     </ul>
