--- a/livestockapp/templates/pregnancy_details/insert_pregnancy_detail.html
+++ b/livestockapp/templates/pregnancy_details/insert_pregnancy_detail.html
@@ -17,38 +17,38 @@
   <form action='/insert_pregnancy_detail' method="POST" >
     <div class="alert alert-dark" role="alert" ><b >Basic Info</b></div>
     {% if error2 %}
-    <div class="alert alert-danger offset-2" role="alert">
+    <div class="alert alert-danger" role="alert">
       Please Enter Token No !!    
     </div>
     {% endif %}  
     {% if error3 %}
-    <div class="alert alert-danger offset-2" role="alert">
+    <div class="alert alert-danger" role="alert">
       Please Enter Name !!    
     </div>
     {% endif %} 
     {% if error4 %}
-    <div class="alert alert-danger offset-2" role="alert">
+    <div class="alert alert-danger" role="alert">
       Please Enter Color !!    
     </div>
     {% endif %} 
     {% if error5 %}
-    <div class="alert alert-danger offset-2" role="alert">
+    <div class="alert alert-danger" role="alert">
       Please Enter Category !!    
     </div>
     {% endif %} 
     {% if error6 %}
-    <div class="alert alert-danger offset-2" role="alert">
+    <div class="alert alert-danger" role="alert">
       Please Enter Gender!!    
     </div>
     {% endif %} 
 
     {% if error8 %}
-    <div class="alert alert-danger offset-2" role="alert">
+    <div class="alert alert-danger" role="alert">
       Please Enter pregnancy_start_date !!    
     </div>
     {% endif %} 
     {% if error9 %}
-    <div class="alert alert-danger offset-2" role="alert">
+    <div class="alert alert-danger" role="alert">
       Please Enter is_Active Field !!    
     </div>
     {% endif %} 
