--- a/livestockapp/templates/animal_profile/insert_animal_profile.html
+++ b/livestockapp/templates/animal_profile/insert_animal_profile.html
@@ -48,7 +48,7 @@
     <div class="row">
       <div class="col-sm-3">
         <label class=" control-label">Token No :<span style="color:red; font-weight:bold;">*</span></label>
-        <input type="text" class="form-control" id="token_no" name="token_no"  value="Animal-{{latest_token}}" readonly>
+        <input type="text" class="form-control" id="token_no" name="token_no" ><!-- value="Animal-{{latest_token}}" readonly>-->
       </div>
       <div class="col-sm-3">
           <label class=" control-label">Name :</label>
