--- a/livestockapp/templates/animal_profile/update_animal_profile.html
+++ b/livestockapp/templates/animal_profile/update_animal_profile.html
@@ -50,8 +50,8 @@
         <label class=" control-label">Token No :<span style="color:red; font-weight:bold;">*</span></label>
 
         <input type="text" class="form-control" name="animal_id" required maxlength="50" value="{{animal.animal_id}}" readonly hidden/>
-      <!--  <input type="text" class="form-control" id="token_no" name="token_no" value= "Animal-{{animal.token_no}}" readonly >
-      -->
+       
+        <input type="text" class="form-control" id="token_no" name="token_no" value= "{{animal.token_no}}" >
       </div>
       <div class="col">
           <label class=" control-label">Name :<span style="color:red; font-weight:bold;">*</span></label>
@@ -110,14 +110,14 @@
       </div>
       <div class="col-sm-3" >
 		    <label class=" control-label">Gender : <span style="color:red; font-weight:bold;">*</span></label>
-       <select  name="gender" class="form-control" required="required" id="gender" class="gender">
+       <select  name="gender" class="form-control" required="required" id="gender" class="gender" >
           {% if animal.gender == 'male' %}
-            <option value="Male" selected >Male</option>
-            <option value="Female" >Female</option>
+            <option value="male" selected >Male</option>
+            <option value="female" >Female</option>
             
           {% else  %}
-          <option value="Female" selected>Female</option>
-          <option value="Male" >male</option>
+          <option value="female" selected>Female</option>
+          <option value="male" >male</option>
           {% endif %}
           
         </select>
