working on find error

--- a/livestockapp/templates/share_animal/shared_animal_payment_input.html
+++ b/livestockapp/templates/share_animal/shared_animal_payment_input.html
@@ -150,14 +150,12 @@
       </div>
     </div>
     <div>
-      <button type="submit" class="btn btn-success my-3" id="animal_voucher_post">Submit</button>  
+      <button type="submit" class="btn btn-success my-3" id="animal_voucher_post_1">Submit</button>  
     </div>
   {% comment %} </div> {% endcomment %}
   </form>
 </div>
           
-
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 <script>
   $(document).ready(function() {
