--- a/livestockapp/templates/share_animal/shared_animal_payment_update.html
+++ b/livestockapp/templates/share_animal/shared_animal_payment_update.html
@@ -169,7 +169,7 @@
     </div>
     </div>
     <div>
-      <button type="submit" class="btn btn-success my-3" id="animal_voucher_post">Submit</button>  
+      <button type="submit" class="btn btn-success my-3" id="animal_voucher_post_1">Submit</button>  
     </div>
   {% comment %} </div> {% endcomment %}
   </form>
