--- a/livestockapp/templates/animal_profile/insert_animal_profile.html
+++ b/livestockapp/templates/animal_profile/insert_animal_profile.html
@@ -7,24 +7,18 @@
 
   {% include 'navbar.html' %}
 
-{% block content %}
-
-
 
   
 {% comment %} <div class="container my-3"> 
   <div  style="margin-left:30%; margin-top:-42%; "><b></b></div> {% endcomment %}
 <div style="margin:2%;">
-  <form action='/insert_animal_profile' method="POST" >
+  <form action='/insert_animal_profile' method="POST" enctype="multipart/form-data">
     <div class="alert alert-dark " role="alert" style="margin-top:2%;"><b >Basic Info</b></div>
     {% if error2 %}
     <div class="alert alert-danger" role="alert">Please Enter Token No !! </div>
     {% endif %}  
     {% if error3 %}
     <div class="alert alert-danger" role="alert">Please Enter purchased_by !! </div>
-    {% endif %} 
-    {% if error4 %}
-    <div class="alert alert-danger" role="alert">Please Enter Color !! </div>
     {% endif %} 
     {% if error5 %}
     <div class="alert alert-danger" role="alert"> Please Enter Category !! </div>
@@ -35,16 +29,12 @@
     {% if error7 %}
     <div class="alert alert-danger" role="alert"> Please Enter Person!! </div>
     {% endif %} 
-    {% if error8 %}
-    <div class="alert alert-danger" role="alert">Please Enter pragnancy_start_date !! </div>
-    {% endif %} 
-    {% if error9 %}
-    <div class="alert alert-danger" role="alert">Please Enter is_Active Field !! </div>
-    {% endif %} 
+
+ 
 
 
     {% csrf_token %}
-    {% comment %} <div class="container-fluid" style="margin-left:0%;"> {% endcomment %}
+
     <div class="row">
       <div class="col-sm-3">
         <label class=" control-label">Token No :<span style="color:red; font-weight:bold;">*</span></label>
@@ -63,20 +53,69 @@
         <input type="text" class="form-control" id="weight" name="weight"  >
       </div>
     </div>
-    
+
     <div class="row">
       <div class="col-sm-3" >
         <label class="from-group" >Category :<span style="color:red; font-weight:bold;">*</span></label>
-        <select id="category_id" name="category_id"  class="form-control">
+        <select id="category_id" name="category_id"  class="form-control" required>
           <option value="">Select Category</option>
           {% for x in ani %}
           <option value="{{x.category_id}}">{{x.name}}</option>  
         {% endfor %}
         </select>
       </div>
-      
       <div class="col-sm-3" >
-        <label for="purchase_price ">Purchase Price :<span style="color:red; font-weight:bold;">*</span></label>
+        <label class=" control-label">Date of Birth :</label>
+        <input type="date" class="form-control" id="date_of_birth" name="date_of_birth" >
+      </div>
+      <div class="col-sm-3" >
+		    <label class=" control-label">Gender : <span style="color:red; font-weight:bold;">*</span></label>
+        <select onchange="changeDropdown(this.value);" name="gender" class="form-control" required id="gender" class="gender">
+          <option value="">Select Gender</option>
+          <option value="male" >Male</option>
+          <option value="female">Female</option>
+        </select>
+      </div>
+      {% comment %} <div class="col-sm-3" >
+        <label class=" control-label">Uplod Image</label>
+        <input class="form-control" type="file" id="image" name="image">
+      </div> {% endcomment %}
+      <div  class="col-sm-3">
+        
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-3"  >
+        <label class="from-group" >Animal Type:<span style="color:red; font-weight:bold;">*</span></label>
+        <select id="animal_type" name="animal_type"  class="form-control" required>
+          <option value="">Select Option</option>
+          <option value="1">Purchased</option>
+          <option value="2">Shared</option>
+          <option value="3">New Born</option>
+        </select>
+      </div>
+
+      <div class="col-sm-3" >
+        <label for="status" style="margin-top: 10%">is Active :</label>
+        <input type="checkbox"  id="status" name="status">
+        <input type="text"  id="status_val" name="status_val"  value="0" hidden>
+      </div>
+    </div>
+
+    <div class="row" id = 'purchased_detail'>
+
+      <div class="col-sm-3" >
+        <label class="from-group" >Party:</label>
+        <select id="purchase_party_id" name="purchase_party_id"  class="form-control">
+          <option value="">Select Partner</option>
+          {% for x in all_parties %}
+          <option value="{{x.party_code}}">{{x.name}}</option>  
+        {% endfor %}
+        </select>    
+      </div>
+      <div class="col-sm-3" >
+        <label for="purchase_price ">Purchase Price :</label>
         <input type="text" class="form-control" id="purchase_price" name="purchase_price"  >
       </div>
       <div class="col-sm-3" >
@@ -84,89 +123,47 @@
         <input type="date" class="form-control" id="purchased_on" name="purchased_on" value="{{date}}" >
       </div>
     
-      <div class="col-sm-3" >
-        <label for="purchased_by">Purchased By :<span style="color:red; font-weight:bold;">*</span></label>
-        <select class="form-control" id="purchased_by" name="purchased_by">
-          <option value="">Select Vendor</option>
-          {% for party in all_parties %}
-          <option value="{{party.party_code}}">{{party.name}}</option>
-          {% endfor %}
-        </select>
-        
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-3" >
-        <label class=" control-label">Date of Birth :</label>
-        <input type="date" class="form-control" id="date_of_birth" name="date_of_birth" >
-      </div>
-      <div class="col-sm-3" >
-		    <label class=" control-label">Gender : <span style="color:red; font-weight:bold;">*</span></label>
-        <select onchange="changeDropdown(this.value);" name="gender" class="form-control" required="required" id="gender" class="gender">
-          <option value="">Select Gender</option>
-          <option value="male" >Male</option>
-          <option value="female">Female</option>
-        </select>
-      </div>
-      <div class="col-sm-3" >
-         
-      </div>
-      <div  class="col-sm-3">
-        
-      </div>
-      
-      
-    </div>
-    <div class="row" style='margin-top:30px;'>
       <div class="col-sm-3"  >
-        <label class="from-group" >Is Shared:<span style="color:red; font-weight:bold;">*</span></label>
-        <input type="hidden" id="is_shared_value" name="is_shared_value" value="{{ animal.is_shared }}">
+        <button type="button" class="btn btn-sm btn-primary" id="btn_save" style="margin-left: 28%;" data-toggle="modal" data-target="#add_account_model">View Voucher</button>
+      </div> 
+    </div>
+    
+    <div class="row" id='shared_detail'>
 
-        <select id="is_shared" name="is_shared"  class="form-control">
-          <option value="">Select Optiona</option>
-          <option value="0">No</option>
-          <option value="1">Yes</option>
-        </select>
-
-      </div>
-      <div class="col-sm-3"  id="hiddenFields1">
-        <label class="from-group" >Animal Partner:<span style="color:red; font-weight:bold;">*</span></label>
-        <select id="person_id" name="person_id"  class="form-control">
+      <div class="col-sm-3">
+        <label class="from-group" >Party:<span style="color:red; font-weight:bold;">*</span></label>
+        <select id="shared_party_id" name="shared_party_id"  class="form-control">
           <option value="">Select Partner</option>
-          {% for x in per %}
-          <option value="{{x.id}}">{{x.username}}</option>  
+          {% for x in all_parties %}
+          <option value="{{x.party_code}}">{{x.name}}</option>  
         {% endfor %}
         </select>    
       </div>
-      <div class="col-sm-3"  id="hiddenFields2" >
+
+      <div class="col-sm-3"  >
         <label class=" control-label" > Start Date :</label>
         <input type="date" class="form-control"  name="start_date"  >
       </div>
-      <div class="col-sm-3"  id="hiddenFields3" >
+      <div class="col-sm-3" >
         <label for="end_date" class=" control-label" > End Date :</label>
         <input type="date" class="form-control"  name="end_date" value="" >
       </div>  
     </div>
 
+    <div class="row" id='new_born_detail'>
 
-    <div class="row my-3" >
-      <div class="col-sm-3"  >
-        
+      <div class="col-sm-3">
+        <label class="from-group" >Parent:<span style="color:red; font-weight:bold;">*</span></label>
+        <select id="parent_id" name="parent_id"  class="form-control">
+          <option value="">Select Partner</option>
+          {% for x in animal_list %}
+          <option value="{{x.animal_id}}">{{x.token_no}}</option>  
+        {% endfor %}
+        </select>    
       </div>
-      <div class="col-sm-3" >
-        <label for="status" >is Active :<span style="color:red; font-weight:bold;">*</span></label>
-        <input type="checkbox"  id="status" name="status">
-        <input type="text"  id="status_val" name="status_val"  value="0" hidden>
-      </div>
-      <div class="col-sm-3"  >
-      </div>
-      <div class="col-sm-3"  id="hiddenFields4" >
-        <button type="button" class="btn btn-sm btn-primary" id="btn_save" style="margin-left: 28%;" data-toggle="modal" data-target="#add_account_model">View Voucher</button>
-{% comment %}
-        <button  class="btn btn-sm btn-primary" id="btn_save" style="margin-left: 28%; " data-toggle="modal" data-target="#add_account_model">View Voucher</button>
-        {% endcomment %}
-      </div>  
+ 
     </div>
+
       
     <div class="row">
       <div class="col-sm-12">
@@ -260,21 +257,30 @@
 
 <script type="text/javascript">
   $(document).ready(function() {
-    gender = $("#gender").val();
-    if(gender == 'male'){
-      $("#pregnant_val").val(0);
-      $("#hiddenFields1").hide();
-      $("#hiddenFields").hide();
-    }else{
-    if($('#is_pregnant').is(":checked")){
-      $("#pregnant_val").val(1);
-        $("#hiddenFields").show();
-      } else{
-      $("#pregnant_val").val(0);
-      $("#hiddenFields").hide();
-    }
+    
+  // Animal Type Dependancies 
+  $("#purchased_detail").hide()
+  $("#shared_detail").hide()
+  $("#new_born_detail").hide()
+  $("#animal_type").on('change',function(){
+    var animal_type = $("#animal_type").val();
+   
+    if (animal_type == 1){
+     $("#purchased_detail").show()
+     $("#shared_detail").hide()
+     $("#new_born_detail").hide()
 
-  }
+    } else if( animal_type==2){
+      $("#purchased_detail").hide()
+      $("#shared_detail").show()
+      $("#new_born_detail").hide()
+
+    } else{
+      $("#new_born_detail").show()
+      $("#purchased_detail").hide()
+      $("#shared_detail").hide()
+    }
+  })
 
     $("#status").on('click',function(){
       var status = $("#status").val();
@@ -285,65 +291,31 @@
       }
     })
 
-    // 
-    $("#is_shared").on('change',function(){
-      var is_shared = $("#is_shared").val();
-  
-      if(is_shared == "0"){
-       
-        $("#hiddenFields1").hide();
-        $("#hiddenFields2").hide();
-        $("#hiddenFields3").hide();
-        $("#hiddenFields4").hide();
-        $("#pregnant_val").val(0);
-      }
-      else{
-        $("#hiddenFields1").show();
-        $("#hiddenFields2").show();
-        $("#hiddenFields3").show();
-        $("#hiddenFields4").show();
-       
-      }
-         
-    });
-    $("#is_shared").on('change',function(){
-      var is_shared = $("#is_shared").val();
-  
-      if(is_shared == "1"){
-       
-        $("#hiddenFields4").hide();
-        $("#pregnant_val").val(0);
-      }
-      else{
-        $("#hiddenFields4").show();
-       
-      }
-         
-    });
-// Voucer Code Start
 
-// writing Animal Name in Voucher
-$("#ani_name").on('keyup',function(){
-  var ani_name = $("#ani_name").val();
-  $("#name").val(ani_name)
-})
-// writing Animal Purchase Price in Voucher
-$("#purchase_price").on('keyup',function(){
-  var purchase_price = $("#purchase_price").val();
-  $("#price").val(purchase_price)
-})
-// Show Vendor Name in Voucher
-$("#purchased_by").on('change',function(){
-  var purchased_by = $("#purchased_by").val();
-  var vendor_name = $("#purchased_by option:selected").text(); 
-  $("#vendor_id").val(purchased_by)
-  $("#vendor_name").val(vendor_name)
-})
+
+
+// Voucer Code Start
+    // writing Animal Name in Voucher
+    $("#ani_name").on('keyup',function(){
+      var ani_name = $("#ani_name").val();
+      $("#name").val(ani_name)
+    })
+    // writing Animal Purchase Price in Voucher
+    $("#purchase_price").on('keyup',function(){
+      var purchase_price = $("#purchase_price").val();
+      $("#price").val(purchase_price)
+    })
+    // Show Vendor Name in Voucher
+    $("#purchased_by").on('change',function(){
+      var purchased_by = $("#purchased_by").val();
+      var vendor_name = $("#purchased_by option:selected").text(); 
+      $("#vendor_id").val(purchased_by)
+      $("#vendor_name").val(vendor_name)
+    })
 // Voucer Code END
 });
 
 </script>  
 
-{% endblock content %}
 </body>
 </html>
