--- a/livestockapp/templates/navbar.html
+++ b/livestockapp/templates/navbar.html
@@ -8,6 +8,10 @@
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+	<script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+	<script src="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css"></script>
+
+
     {% comment %} --------------------------------------------------------------------------------------------------------- {% endcomment %}
     {% comment %} <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
